# BMP-Converter

./: CMakeLists.txt  LICENSE  README.md
src/: main.cpp
src/BMP/: BMP.cpp  BMP.hpp  ioProcessBMP.cpp  ioProcessBMP.hpp
src/HandleGuard/: WinApiHandle.cpp  WinApiHandle.hpp
